--- a/doc/201506_phdDescription.tex
+++ b/doc/201506_phdDescription.tex
@@ -45,9 +45,9 @@ In the same time the thesis will illustrate the viability of bringing together e
 
 The first step of the research will consist on a theoretical exploration, to understand which cultural and economical dynamics lead to which type of economical system (centralized economy, free market or heterogeneous economy) given different geographical, demographics and political context.
 
-In a second time, the thesis will use evolutionary archaeological tools and all available data to choose the more probable scenario among those previously explored and review them if needed.
+In a second time, the thesis will use evolutionary archaeological tools and all available data to choose the more probable scenario among those previously explored and adjust them using the result of the data analysis.
 
-To succeed in those tasks the PhD will be co-supervised by Sergí Valverde from the Complex System Lab and Xavier Rubio from the Barcelona Supercomputing Center, thus it will benefit the expertise of their associated lab on modeling and analysing complex adaptive systems. Moreover it will rely on all team already engaged in the EPNet project, who are the rest of the team in the Barcelona Supercomputer Center, with whom the theoretical model is ale rad under development, the CEIPAC  laboratory, specialised in Ancient History and the Roman Empire and the PhysComp laboratory specialised in network an big data analysis.
+To succeed in those tasks the PhD will be co-supervised by Sergí Valverde from the Complex System Lab and Xavier Rubio from the Barcelona Supercomputing Center, thus it will benefit the expertise of their associated lab on modeling and analysing complex adaptive systems. Moreover it will rely on all team already engaged in the EPNet project, which include the other members of the team in the Barcelona Supercomputer Center where the theoretical model is already under development, the CEIPAC laboratory, specialised in Ancient History and the Roman Empire, and the PhysComp laboratory, specialised in network an big data analysis.
 
 %In the following paragraphs we will quickly argue why we choose Agent-Based Modeling and how we will position it in regards to evolutionary process and evolutionary thinking. Then we will propose some economical approach that we think promising in our context and with our approach, and we will finish explaining how we will articulate the model with archaeological and historical studies.
 %
@@ -140,7 +140,7 @@ To succeed in those tasks the PhD will be co-supervised by Sergí Valverde from 
 %
 %\bibliographystyle{apalike}
 %\bibliography{/home/scarrign/Documents/biblio/bib/phd,/home/scarrign/Documents/biblio/bib/memoireLophiss}  
-	\begin{center}
+	\begin{center,}
 		\includegraphics[width=7cm]{logo}
 	\end{center}
 \end{document}
