--- a/doc/201506_phdDescription.tex
+++ b/doc/201506_phdDescription.tex
@@ -7,7 +7,7 @@
 %\usepackage{luatextra}
 \usepackage{fontspec}
 %Ligatures={Contextual, Common, Historical, Rare, Discretionary}
-\setmainfont[Mapping=tex-text]{Linux Libertine O}
+\setmainfont[Mapping=tex-text]{Apple Garamond}
 %%First draft of a research proposal
 
 \usepackage{natbib}
@@ -140,7 +140,7 @@ To succeed in those tasks the PhD will be co-supervised by Sergí Valverde from 
 %
 %\bibliographystyle{apalike}
 %\bibliography{/home/scarrign/Documents/biblio/bib/phd,/home/scarrign/Documents/biblio/bib/memoireLophiss}  
-	\begin{center,}
+	\begin{center}
 		\includegraphics[width=7cm]{logo}
 	\end{center}
 \end{document}
