--- a/doc/201508_SomeNotesAboutTheModel.tex
+++ b/doc/201508_SomeNotesAboutTheModel.tex
@@ -26,4 +26,29 @@ After lot of experiment with different number of good and number of agent we can
     \caption{Interaction between number of agent and number of good.}
 \end{figure}
 
+\section{New Mathematical stuff}
+
+EQUATIOM: %TODO noter les equations!!!
+
+test with $ngoods=3$ and $n_agents=500$ and $timeStep=30000$
+
+\subsection{Score of the agents:}
+\begin{figure}[htp]
+    \centering
+    \begin{tabular}{cc}
+	\includegraphics[width=3.5cm]{box.pdf}
+	\includegraphics[width=3.5cm]{meanAllGroup.pdf}
+    \end{tabular}
+    \caption{Interaction between number of agent and number of good.}
+\end{figure}
+\subsection{Difference of optimal price:}
+(for the non produced price, I don't know for the produced one)
+\begin{figure}[htp]
+    \centering
+    \begin{tabular}{cc}
+	\includegraphics[width=3.5cm]{box.pdf}
+    \end{tabular}
+    \caption{Interaction between number of agent and number of good.}
+\end{figure}
+
 \end{document}
