--- a/doc/201510_AbstractCAA.tex
+++ b/doc/201510_AbstractCAA.tex
@@ -14,7 +14,16 @@
 \date{Octobre 2015}
 
 \begin{document}
-To study the interaction between cultural mechanism and economics mechanims we propose a agent based model 
-In this paper we explore the impact of network topologies on a simple economy. T where people exchange a good they are producing in order to get other good they are not producing. We have previously shown that this simple economical and cultural copy mechanisms lead to an equilibrium where the  
+
+In this study we want to look on how the local cultural environment of individuals in a society could impact the global dynamics of the economy, and more precisely in which condition optimal decentralized free market can emerge and stay stable.
+
+To do so we start from a model that has already been shown to be able converge to a decentralized free market. In this model, individual have to trade a good they produce in order to get other good they don't produce, with as only mean of adapting themsleves is by imitating the strategy of the most successful agent. 
+
+In this previous model each agent was able to know the success of all the other angent and imitate them, and the system allow everyone to wuickly find strategies .sThis allow the system to quickly  exchange the good they produce to get the good they need wihout the need of a central coordination. 
+
+In current paper we want to study in what extend the capacity of this model to converge to an optimal and decentralized market depend on the properties of the cultural network of the agents. To do so we change the cultural environement of the agents and we explore a wide variety of differents tyopologies under different parameters.
+
+We thus ilustra under which particular trade condition and with what kind of network topologies a stable, decentralized economy could emerge, and we hope to fruitfully apply such approach to test this possibility of free market in anciant economy where nothing is known about the economy but where trade network or part of it could be reconstructed.
+
 \end{document}
 
