notes and abstract

--- a/doc/201508_SomeNotesAboutTheModel.tex
+++ b/doc/201508_SomeNotesAboutTheModel.tex
@@ -30,23 +30,25 @@ After lot of experiment with different number of good and number of agent we can
 
 EQUATIOM: %TODO noter les equations!!!
 
+Now the condition of acceptance of the 
+
 test with $ngoods=3$ and $n_agents=500$ and $timeStep=30000$
 
 \subsection{Score of the agents:}
 \begin{figure}[htp]
     \centering
     \begin{tabular}{cc}
-	\includegraphics[width=3.5cm]{box.pdf}
-	\includegraphics[width=3.5cm]{meanAllGroup.pdf}
+	\includegraphics[width=5cm]{boxScoreTime.pdf}
+	\includegraphics[width=5cm]{meanEachGroup.pdf}
     \end{tabular}
-    \caption{Interaction between number of agent and number of good.}
+    \caption{Evolution of the score of the agent during the simulation.}
 \end{figure}
 \subsection{Difference of optimal price:}
 (for the non produced price, I don't know for the produced one)
 \begin{figure}[htp]
     \centering
     \begin{tabular}{cc}
-	\includegraphics[width=3.5cm]{box.pdf}
+	\includegraphics[width=3.5cm]{meanRatio.pdf}
     \end{tabular}
     \caption{Interaction between number of agent and number of good.}
 \end{figure}
