--- a/doc/201510_AbstractCAA.tex
+++ b/doc/201510_AbstractCAA.tex
@@ -1,29 +1,21 @@
 \documentclass[a4paper]{article}
 
 
-%%%%lualatex on
-%\usepackage{luatextra}
-\usepackage{fontspec}
-%Ligatures={Contextual, Common, Historical, Rare, Discretionary}
-%\setmainfont[Mapping=tex-text]{Linux Libertine O}
-
-\usepackage{natbib}
-
-\title{Abstract CAA}
+\title{Abstract CAA: The impact of network typologies on economic dynamics}
 \author{Simon Carrignon}
-\date{Octobre 2015}
+\date{October 2015}
 
 \begin{document}
 
-In this study we want to look on how the local cultural environment of individuals in a society could impact the global dynamics of the economy, and more precisely in which condition optimal decentralized free market can emerge and stay stable.
+In this study we want to look at how the local cultural environment of individuals in a society could influence the global dynamics of the economy of this society. More precisely, we want to quantify under which cultural conditions an optimal decentralized free market can emerge and stay stable.
 
-To do so we start from a model that has already been shown to be able converge to a decentralized free market. In this model, individual have to trade a good they produce in order to get other good they don't produce, with as only mean of adapting themsleves is by imitating the strategy of the most successful agent. 
+To do so we use a trade model that has been shown to converge to an optimal market without central authority. In this model, individual have to trade a good they produce in order to get other goods they need, and can change their trading strategies by imitating the strategy of the most successful individuals. 
 
-In this previous model each agent was able to know the success of all the other angent and imitate them, and the system allow everyone to wuickly find strategies .sThis allow the system to quickly  exchange the good they produce to get the good they need wihout the need of a central coordination. 
+In this previous model the cultural environment of the individual was made of every other agents in the system,  i.e. all agents were able to know the success of all the other agents and imitate anyone of them. With this imitation mechanism and the simple trade system, all were quickly able to exchange the good they produce in a way that allows us to get the other goods, without the need of a central coordination. 
 
-In current paper we want to study in what extend the capacity of this model to converge to an optimal and decentralized market depend on the properties of the cultural network of the agents. To do so we change the cultural environement of the agents and we explore a wide variety of differents tyopologies under different parameters.
+In the current paper we want to study in what extend the capacity of this model to converge to an optimal and decentralized market depends on the properties of the cultural network of the individuals. To do so we change the cultural environment of the agents by creating a wide variety of different typologies of networks with different properties leading to different cultural environment. For each environment we then run simulations and observe and measure the properties of the resulting economic dynamics. We thus aim to quantify and illustrate under which particular trade conditions and what kind of cultural environment a stable, decentralized and optimal economy could emerge or not. %%Problem of the fact that there is no result
 
-We thus ilustra under which particular trade condition and with what kind of network topologies a stable, decentralized economy could emerge, and we hope to fruitfully apply such approach to test this possibility of free market in anciant economy where nothing is known about the economy but where trade network or part of it could be reconstructed.
+In coming study we hope to fruitfully apply this approach to evaluate the probability that this kind of economy evolved during the Roman Empire, using trade network reconstructed via Archaeological and Historical evidence. 
 
 \end{document}
 
