--- a/biblio/teamLecture/20151102_OrtegaEtAl.tex
+++ b/biblio/teamLecture/20151102_OrtegaEtAl.tex
@@ -15,12 +15,20 @@ Ortega et All : ABM of obsidian exchange.
 \maketitle
 
 \section{General structure}
+intro mat\& method \& resutl discussion \& Conclusion
 \section{English}
 \section{Clarity}
+good
 \section{Links to similar works}
+the same
 \section{Formulation of the model}
+poour
 \section{Experiment design}
+
+hmmmmmmmmoik
+
 \section{Results and interpretation}
+hsais ap
 
 \bibliographystyle{apalike}
 \bibliography{/home/simon/Documents/Bibliographie/phd.bib}  
