--- a/biblio/teamLecture/20151102_OrtegaEtAl.tex
+++ b/biblio/teamLecture/20151102_OrtegaEtAl.tex
@@ -1,10 +1,8 @@
 \documentclass[a4paper]{article}
 \usepackage{fontspec}
+\usepackage{geometry}
 
-
-%%%%lualatex on
-\usepackage{fontspec}
-
+\geometry{margin=1in}
 
 \title{EpNet Day lectures\\
 Ortega et All : ABM of obsidian exchange.
@@ -15,9 +13,9 @@ Ortega et All : ABM of obsidian exchange.
 \maketitle
 
 \section{General structure}
-intro mat\& method \& result discussion \& Conclusion
+%Intro mat\& method \& result discussion \& Conclusion
 
-They first introduce the archaeological/historical context : what is neolitic and and PPNA-B and then a short but strnge explanation of difference between nomadims and sedentarism. With the ``central'' problem brought by sedentarisation : 
+They first introduce the archaeological/historical context : what is neolitic and and PPNA-B and then a short but strange explanation of difference between nomadims and sedentarism. With the ``central'' problem brought by sedentarisation : 
 \begin{quote}
     dramatic results as fuluid intergroup interactions are crucial for sharing of information, resources and genes.
 \end{quote}
@@ -36,9 +34,11 @@ Seems that the statistical data could be moved from discussion to result and a g
 Some part of the model description remains unclear for me : 
 
 \begin{itemize}
-    \item what is distributed following poisson distribution? 
-    \item How and why ``obsidian is introduced from the northern boundary?''  geological evidence ? (btw production equation is cut in the middle)
+    \item what is distributed following poisson distribution?  (p.4 l. 25)
+    \item How and why ``obsidian is introduced from the northern boundary?''  geological evidence ? (btw production equation is cut in the middle) (ibid)
 \end{itemize}
+
+I don't get neither the general idea of ``sedentarisation is a problem:network the solution''
 
 \section{Links to similar works}
 
@@ -49,7 +49,8 @@ No algorithmic description of the model which would be good if at least the sour
 
 Where come from the two hypothesis on the new node attachment mechanisms?
 
-Critics also made about our model : how variation arise ie how is defined the probability $p$ of creating new links? Important as this probability seem, looking to results, the more important factor
+Critics also made about our model : how variation arise ie how is defined the probability $p$ of creating new links? (p.5 l.1)
+Important as this probability seem, looking to results, the more important factor
 
 \section{Experiment design}
 
@@ -57,7 +58,7 @@ I found strange to use and display only the mean of the 100 runs for each parame
 unquantified value of ``relevant parameter'' (we had the same problem with our model : what statistical test we used? )
 
 \section{Results and interpretation}
-They start by saying that the model demonstrate that ABM can be a powerful tool, I am not sure about the pertinence of this sentence given the way they build the article and that this idea was not introduced before.
+They start by saying that the model demonstrate that ABM can be a powerful tool, I am not sure about the pertinence of this sentence given the way they built the article moreover this idea was not introduced before.
 
 And again, it's seem that the paper is use to justify that 
 
@@ -66,8 +67,8 @@ Sendentarisation is the cause of the creation of complexe network, because seden
     sharing of information, resources and genes.
 \end{quote}
 
-\bibliographystyle{apalike}
-\bibliography{/home/simon/Documents/Bibliographie/phd.bib}  
+Which seems strange or at least not very weel justified
+
 \end{document}
 
 
