--- a/biblio/bib/phd.bib
+++ b/biblio/bib/phd.bib
@@ -1234,3 +1234,19 @@
 	year = "2014"
 }
 
+@article{safarzynska2010evolutionarymodelsineconomicsasurveyofmethodsandbuildingblocks,
+	author = "Safarzy{\'n}ska, Karolina and van den Bergh, JeroenC.J.M.",
+	doi = "10.1007/s00191-009-0153-9",
+	issn = "0936-9937",
+	journal = "Journal of Evolutionary Economics",
+	keywords = "Agent based models; Diversity; Evolutionary computation; Evolutionary game theory; Growth mechanisms; Innovation; Multilevel evolution; Neo-Schumpeterian models; Selection dynamics; B52; C60; C73",
+	language = "English",
+	localfile = "~/projects/PhD/biblio/pdfs/safarzynska2010evolutionarymodelsineconomicsasurveyofmethodsandbuildingblocks.pdf",
+	number = "3",
+	pages = "329--373",
+	publisher = "Springer-Verlag",
+	title = "{Evolutionary models in economics: a survey of methods and building blocks}",
+	url = "http://dx.doi.org/10.1007/s00191-009-0153-9",
+	volume = "20"
+}
+
