--- a/biblio/teamLecture/20151102_OrtegaEtAl.tex
+++ b/biblio/teamLecture/20151102_OrtegaEtAl.tex
@@ -15,20 +15,56 @@ Ortega et All : ABM of obsidian exchange.
 \maketitle
 
 \section{General structure}
-intro mat\& method \& resutl discussion \& Conclusion
+intro mat\& method \& result discussion \& Conclusion
+
+They first introduce the archaeological/historical context : what is neolitic and and PPNA-B and then a short but strnge explanation of difference between nomadims and sedentarism. With the ``central'' problem brought by sedentarisation : 
+\begin{quote}
+    dramatic results as fuluid intergroup interactions are crucial for sharing of information, resources and genes.
+\end{quote}
+
+Sedentarisation seems to be a challenge more than a solution.
+
+Introduce the tool used : ABM and ethongraphic datas from new guinea
+
+After that : raw ``result'' of the model in the 3/ Result following by a strange subpart 3.1 Discussion
+
+Seems that the statistical data could be moved from discussion to result and a good separation between 3)Result and 4)Discussion could be made
 \section{English}
+
 \section{Clarity}
-good
+
+Some part of the model description remains unclear for me : 
+
+\begin{itemize}
+    \item what is distributed following poisson distribution? 
+    \item How and why ``obsidian is introduced from the northern boundary?''  geological evidence ? (btw production equation is cut in the middle)
+\end{itemize}
+
 \section{Links to similar works}
-the same
+
+
 \section{Formulation of the model}
-poour
+
+No algorithmic description of the model which would be good if at least the sources would be available somewhere. No clues neither about the technology used.
+
+Where come from the two hypothesis on the new node attachment mechanisms?
+
+Critics also made about our model : how variation arise ie how is defined the probability $p$ of creating new links? Important as this probability seem, looking to results, the more important factor
+
 \section{Experiment design}
 
-hmmmmmmmmoik
+I found strange to use and display only the mean of the 100 runs for each parameters.
+unquantified value of ``relevant parameter'' (we had the same problem with our model : what statistical test we used? )
 
 \section{Results and interpretation}
-hsais ap
+They start by saying that the model demonstrate that ABM can be a powerful tool, I am not sure about the pertinence of this sentence given the way they build the article and that this idea was not introduced before.
+
+And again, it's seem that the paper is use to justify that 
+
+Sendentarisation is the cause of the creation of complexe network, because sedentarisation \emph{need}
+\begin{quote}
+    sharing of information, resources and genes.
+\end{quote}
 
 \bibliographystyle{apalike}
 \bibliography{/home/simon/Documents/Bibliographie/phd.bib}  
