journal club turchin

--- a/doc/cours/phdjournalclub/cliodynamics.tex
+++ b/doc/cours/phdjournalclub/cliodynamics.tex
@@ -1,6 +1,6 @@
 
 \begin{document}
-The interview of turchin : 
+\section{Notes abouts the Interview of turchin by Piglluci}
 	is it possible to study history scientificly?
 	are their general laws and principle underlying history?
 
