--- a/doc/phdjournalclub/cliodynamics.tex
+++ b/doc/phdjournalclub/cliodynamics.tex
@@ -1,12 +1,9 @@
-\documentclass[a4paper]{article}
-\usepackage{fontspec}
+\documentclass{beamer}
+\usetheme{Dresden}
+\usecolortheme{beaver}
 
 
-%%%%lualatex on
-%\usepackage{luatextra}
 \usepackage{fontspec}
-%Ligatures={Contextual, Common, Historical, Rare, Discretionary}
-%\setmainfont[Mapping=tex-text]{Linux Libertine O}
 
 \usepackage{natbib}
 
@@ -47,17 +44,31 @@ external vs internal factor:
 
 historian don't call them scientist, they called them Humanist.
 
-\section{\cite{turchin_arise_2008}}
-The ``original'', short article of turchin in Nature. In this article Turchin urge the need to make History a science:
+\begin{frame}
+    \section{\cite{turchin_arise_2008}}
+    The ``original'', short article of turchin in Nature. In this article Turchin urge the need to make History a science:
+\end{frame}
 
 
-\section{\cite{turchin_war_2013}}
+    \section{\cite{turchin_war_2013}}
+\begin{frame}{One exemple of a ``Cliodynamic Study''}
 
-Article with the model evolving and after:
+    \cite{turchin_war_2013}
 
-\cite{thomas_does_2014} : critics of the article and
+    (cf workshop EPNET turututuuuu)
 
-\cite{turchin_reply_2014}: The answer
+
+\end{frame}
+
+\begin{frame}{Crictics}
+    \cite{thomas_does_2014} : critics of the article and
+    of the model of the previous paper
+    on cliodynamics in general
+\end{frame}
+
+\begin{frame}{Answer to critics}
+    \cite{turchin_reply_2014}: The answer
+\end{frame}
 
 \bibliographystyle{apalike}
 \bibliography{phd-journal-club}
