--- a/doc/biblio/bib/phd.bib
+++ b/doc/biblio/bib/phd.bib
@@ -1250,3 +1250,34 @@
 	volume = "20"
 }
 
+@article{bettencourt2010aunifiedtheoryofurbanliving,
+	author = "Luis, Bettencourt and Geoffrey, West",
+	issn = "0028-0836",
+	journal = "Nature",
+	localfile = "../pdfs/bettencourt2010aunifiedtheoryofurbanliving.pdf",
+	month = "oct",
+	note = "10.1038/467912a",
+	number = "7318",
+	pages = "912--913",
+	publisher = "Nature Publishing Group, a division of Macmillan Publishers Limited. All Rights Reserved.",
+	risfield_0_m3 = "10.1038/467912a",
+	title = "{A unified theory of urban living}",
+	volume = "467",
+	year = "2010"
+}
+
+@article{bettencourt2007growthinnovationscalingandthepaceoflifeincities,
+	abstract = "Humanity has just crossed a major landmark in its history with the majority of people now living in cities. Cities have long been known to be society's predominant engine of innovation and wealth creation, yet they are also its main source of crime, pollution, and disease. The inexorable trend toward urbanization worldwide presents an urgent challenge for developing a predictive, quantitative theory of urban organization and sustainable development. Here we present empirical evidence indicating that the processes relating urbanization to economic development and knowledge creation are very general, being shared by all cities belonging to the same urban system and sustained across different nations and times. Many diverse properties of cities from patent production and personal income to electrical cable length are shown to be power law functions of population size with scaling exponents, β, that fall into distinct universality classes. Quantities reflecting wealth creation and innovation have β ≈1.2 >1 (increasing returns), whereas those accounting for infrastructure display β ≈0.8 <1 (economies of scale). We predict that the pace of social life in the city increases with population size, in quantitative agreement with data, and we discuss how cities are similar to, and differ from, biological organisms, for which β<1. Finally, we explore possible consequences of these scaling relations by deriving growth equations, which quantify the dramatic difference between growth fueled by innovation versus that driven by economies of scale. This difference suggests that, as population grows, major innovation cycles must be generated at a continually accelerating rate to sustain growth and avoid stagnation or collapse.",
+	author = "Bettencourt, Lu{\'i}s M. A. and Lobo, Jos{\'e} and Helbing, Dirk and K{\"u}hnert, Christian and West, Geoffrey B.",
+	doi = "10.1073/pnas.0610172104",
+	eprint = "http://www.pnas.org/content/104/17/7301.full.pdf",
+	journal = "Proceedings of the National Academy of Sciences",
+	localfile = "../pdfs/bettencourt2007growthinnovationscalingandthepaceoflifeincities.pdfs",
+	number = "17",
+	pages = "7301--7306",
+	title = "{Growth, innovation, scaling, and the pace of life in cities}",
+	url = "http://www.pnas.org/content/104/17/7301.abstract",
+	volume = "104",
+	year = "2007"
+}
+
