pres journal club

--- a/doc/teamLecture/20151120_Acerbietal.tex
+++ b/doc/teamLecture/20151120_Acerbietal.tex
@@ -114,9 +114,18 @@
 
 	\begin{columns}
 		\begin{column}{.4\textwidth}
+		    On the right figure :
+		 \begin{itemize}
+		     \item (A,B) Preference model
+		     \item (C,D) Neutral model
+		     \item (E,F) Status model
+		 \end{itemize}
 			\begin{figure}
 				\includegraphics[width=5cm]{realdata.png}
+				\caption{real data}
 			\end{figure}
+
+
 		\end{column}
 		\begin{column}{.6\textwidth}
 			\begin{figure}
